Don't set EMC values for inscriber presses